# gfgExercises

./: README.md
build-gfgExercises-STL-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  gfgExercises  gfgExercises.cbp
build-gfgExercises-STL-Default/gfgExercises_autogen/: moc_predefs.h
gfgExercises/: CMakeCache.txt  CMakeLists.txt  exercisesclass.cpp  exercisesclass.h  main.cpp
untitled folder/: CMakeCache.txt
